# filmulator-gui

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  azure-pipelines.yml  azure_build_librt.sh  compile_commands.json  filmulator_build.iss  main.py  plan.md  pyproject.toml  release_instructions.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml
docs/: pipeline_refactor_plan.md
filmulator-gui/: CMakeLists.txt  CMakePresets.json  filmulator-gui.pro  main.cpp  vcpkg-configuration.json  vcpkg.json
filmulator-gui/Halide/: HSVtoRGB.cpp  RGBtoHSV.cpp  applyfilmlikecurve.cpp  calcLayerMix.cpp  calcReservoirConcentration.cpp  demosaic.cpp  develop.cpp  diffuse.cpp  downscaleDiffuse.cpp  filmulate.cpp  generateFilmulatedImage.cpp  halideFilmulate.h  performLayerMix.cpp  postFilmulatorPipeline.cpp  runFilmulator.cpp  setupFilmulator.cpp  vibranceSaturation.cpp
filmulator-gui/Halide/include/: Halide.h  HalideRuntime.h  clock.h  image_io.h
filmulator-gui/core/: agitate.cpp  colorCurves.cpp  colorSpaces.cpp  curves.cpp  debug_utils.h  develop.cpp  diffuse.cpp  exposure.cpp  filmSim.hpp  filmulate.cpp  filmulator.cpp  imagePipeline.cpp  imagePipeline.h  imload.cpp  imread.cpp  imreadJpeg.cpp  imreadTiff.cpp  imwrite.cpp  imwriteJpeg.cpp  imwriteTiff.cpp  interface.h  layerMix.cpp  logging.cpp  logging.h  lut.hpp  matrix.hpp  mergeExps.cpp  myLibraw.h  outputFile.cpp  rotateImage.cpp  scale.cpp  timeDiff.cpp  vibranceSaturation.cpp  whiteBalance.cpp  whitepointBlackpoint.cpp
filmulator-gui/core/nlmeans/: bisecting_kmeans.cpp  calcC1chanT.cpp  calcW_generic.cpp  expandDims.cpp  highDimBoxFilter.cpp  kMeansNLMApprox.cpp  nlmeans.hpp  splitCluster.cpp
filmulator-gui/core/nlmeans/eigen/bench/: BenchSparseUtil.h  BenchTimer.h  BenchUtil.h  analyze-blocking-sizes.cpp  basicbenchmark.cpp  basicbenchmark.h  benchBlasGemm.cpp  benchCholesky.cpp  benchEigenSolver.cpp  benchFFT.cpp  benchGeometry.cpp  benchVecAdd.cpp  bench_gemm.cpp  bench_norm.cpp  bench_reverse.cpp  bench_sum.cpp  benchmark-blocking-sizes.cpp  benchmark.cpp  benchmarkSlice.cpp  benchmarkX.cpp  benchmarkXcwise.cpp  check_cache_queries.cpp  dense_solvers.cpp  eig33.cpp  geometry.cpp  product_threshold.cpp  quat_slerp.cpp  quatmul.cpp  sparse_cholesky.cpp  sparse_dense_product.cpp  sparse_lu.cpp  sparse_product.cpp  sparse_randomsetter.cpp  sparse_setter.cpp  sparse_transpose.cpp  sparse_trisolver.cpp  spmv.cpp  vdw_new.cpp
filmulator-gui/core/nlmeans/eigen/blas/: BandTriangularSolver.h  GeneralRank1Update.h  PackedSelfadjointProduct.h  PackedTriangularMatrixVector.h  PackedTriangularSolverVector.h  Rank2Update.h  common.h  double.cpp  level1_cplx_impl.h  level1_impl.h  level1_real_impl.h  level2_cplx_impl.h  level2_impl.h  level2_real_impl.h  level3_impl.h  single.cpp  xerbla.cpp
filmulator-gui/core/nlmeans/eigen/doc/: tutorial.cpp
filmulator-gui/core/nlmeans/eigen/failtest/: bdcsvd_int.cpp  block_nonconst_ctor_on_const_xpr_2.cpp  block_on_const_type_actually_const_0.cpp  block_on_const_type_actually_const_1.cpp  colpivqr_int.cpp  (+29 more)
filmulator-gui/core/pipeline/: ChromaNRStage.cpp  ChromaNRStage.h  DemosaicStage.cpp  DemosaicStage.h  ImpulseNRStage.cpp  ImpulseNRStage.h  LoadStage.cpp  LoadStage.h  NlmeansNRStage.cpp  NlmeansNRStage.h  Pipeline.h  PipelineContext.h  PostDemosaicStage.cpp  PostDemosaicStage.h  PrefilmulationStage.cpp  PrefilmulationStage.h  RawImage.h  Stage.h
filmulator-gui/core/rawtherapee/: FTblockDN.cc  boxblur.cc  boxblur.h  cplx_wavelet_dec.cc  cplx_wavelet_dec.h  cplx_wavelet_filter_coeffs.h  cplx_wavelet_level.h  gauss.cc  gauss.h  helpersse2.h  impulse_denoise.cc  labimage.cc  labimage.h  opthelper.h  rt_math.h  rt_routines.h  sleef.h  sleefsseavx.h
filmulator-gui/database/: backgroundQueue.h  basicSqlModel.cpp  basicSqlModel.h  cJSON.c  cJSON.h  camconst.cpp  camconst.h  database.cpp  database.hpp  dateHistogramModel.cpp  dateHistogramModel.h  dbSetup.cpp  exifFunctions.cpp  exifFunctions.h  filmulatorDB.h  importModel.cpp  importModel.h  importProperties.cpp  importWorker.cpp  importWorker.h  organizeModel.cpp  organizeModel.h  organizeProperties.cpp  queueModel.cpp  queueModel.h  signalSwitchboard.cpp  signalSwitchboard.h  sqlInsertion.cpp  sqlInsertion.h  sqlModel.cpp  sqlModel.h
filmulator-gui/database/rawproc_lensfun/: lensfun_dbupdate.cpp  lensfun_dbupdate.h
filmulator-gui/qml/filmulator-gui/: Edit.qml  EditTools.qml  Import.qml  Organize.qml  Queue.qml  Settings.qml  main.qml
filmulator-gui/qml/filmulator-gui/gui_components/: ImportDirEntry.qml  OrganizeDelegate.qml  SlipperySlider.qml  ToolSlider.qml
filmulator-gui/qml/filmulator-gui/i18n/: qml_de.ts  qml_pt.ts
filmulator-gui/qtquick2applicationviewer/: qtquick2applicationviewer.cpp  qtquick2applicationviewer.h
filmulator-gui/resources/linux/: filmulator.desktop  org.filmulator.Filmulator.metainfo.xml
filmulator-gui/resources/macos/: filmulator-gui
filmulator-gui/ui/: filmImageProvider.cpp  filmImageProvider.h  lensSelectModel.cpp  lensSelectModel.h  parameterManager.cpp  parameterManager.h  settings.cpp  settings.h  thumbWriteWorker.cpp  thumbWriteWorker.h  updateHistograms.cpp
filmulator-gui/vcpkg-overlay/librtprocess/: portfile.cmake  vcpkg.json
patches/: lensfun-0001-Fix-underscore-capital-letter-identifiers.patch  lensfun-0002-Replace-instances-of-strdup-with-g_strdup.patch  lensfun-0003-Add-search-path-for-msys-glib2.patch  lensfun-0004-Add-another-alias-for-the-glib-library-name.patch
scripts/: pre-commit  setup-hooks.sh
tests/: CMakeLists.txt
tests/data/raw/: _DSC0355.NEF
tests/e2e/: analyze_diff.ipynb  test_basic_workflow.py  test_raw_pipeline.py
tests/golden/: golden_test_utils.hpp  test_color_adjustments_golden.cpp  test_curves_golden.cpp  test_filmulate_golden.cpp  test_nlmeans_golden.cpp  test_white_balance_golden.cpp
tests/qt/: test_parameter_manager.cpp
tests/unit/: test_curves.cpp  test_nan_break.cpp  test_pipeline_infrastructure.cpp  test_white_balance.cpp
vcpkg-overlay/librtprocess/: portfile.cmake
(+823 files in other folders)
